Bug 17549 - Mobile: new maintenance screens display text shifted down

--- a/skins/weborder_mobile/css/maintenance.css
+++ b/skins/weborder_mobile/css/maintenance.css
@@ -18,7 +18,7 @@
     font-size: 4em;
     font-weight: bold;
     vertical-align: middle;
-    width: 95%;
+    width: 99%;
 }
 
 /* main mod end */
